Make minor tweaks to syntax, styling; fix input-group CSS spacing

--- a/src/officehours_ui/static/css/main.css
+++ b/src/officehours_ui/static/css/main.css
@@ -493,7 +493,7 @@ h3.alert-heading {
 }
 
 .input-group {
-	margin: 0.2rem;
+	margin-top: 0.5rem;
 }
 
 .input-group-text {
